# s3nh-holospectral-net

./: .gitignore  LICENSE  README.md  generate_shakespeare.py  pyproject.toml  requirements.txt  setup.py  todos.md  train.py  train_alpaca.py  train_muon.py  train_shakespeare.py  train_shakespeare_tracker.py  train_shakespeare_v2.py  train_v5.py
checkpoints/: shakespeare_holospectral. pt  shakespeare_holospectral_v2.pt
distil/: 7b_distilation.py
examples/: quickstart.py
holospectral/: __init__.py  config.py  layers.py  model.py  utils.py
holospectral.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_fixes.py  test_model.py
